--- a/proyectMovil/src/app/principal/principal.page.html
+++ b/proyectMovil/src/app/principal/principal.page.html
@@ -27,32 +27,30 @@
 <ion-content>
     <ion-list-header>DOCTOR</ion-list-header>
 
-        <ion-chip outline color="danger" (click)="goAddDoctor()">
-            <ion-label>Add Doctor</ion-label>
-        </ion-chip>
-        <ion-chip outline color="danger" (click)="goSearchDoctor()">
-            <ion-label>Search Doctor</ion-label>
-        </ion-chip>
+    <ion-chip outline color="danger" (click)="goAddDoctor()">
+        <ion-label>Add Doctor</ion-label>
+    </ion-chip>
+    <ion-chip outline color="danger" (click)="goSearchDoctor()">
+        <ion-label>Search Doctor</ion-label>
+    </ion-chip>
 
     <ion-list-header>PATIENT</ion-list-header>
 
-        <ion-chip outline color="danger" (click)="goAddPatient()">
-            <ion-label>Add Patient</ion-label>
-        </ion-chip>
-        <ion-chip outline color="danger" (click)="goSearchPatient()">
-            <ion-label>Search Patient</ion-label>
-        </ion-chip>
+    <ion-chip outline color="danger" (click)="goAddPatient()">
+        <ion-label>Add Patient</ion-label>
+    </ion-chip>
+    <ion-chip outline color="danger" (click)="goSearchPatient()">
+        <ion-label>Search Patient</ion-label>
+    </ion-chip>
 
     <ion-list-header>MEDICAL CHECK</ion-list-header>
 
-        <ion-chip outline color="danger">
-            <ion-label>Add Medical Check</ion-label>
-        </ion-chip>
-        <ion-chip outline color="danger">
-            <ion-label>Update Medical Check</ion-label>
-        </ion-chip>
-        <ion-chip outline color="danger">
-            <ion-label>Remove Medical Check</ion-label>
-        </ion-chip>
+    <ion-chip outline color="danger" (click)="goAddMedicalCheck()">
+        <ion-label>Add Medical Check</ion-label>
+    </ion-chip>
+    <ion-chip outline color="danger" >
+        <ion-label>Update Medical Check</ion-label>
+    </ion-chip>
+
 
 </ion-content>
