--- a/proyectMovil/src/app/principal/principal.page.html
+++ b/proyectMovil/src/app/principal/principal.page.html
@@ -48,8 +48,8 @@
     <ion-chip outline color="danger" (click)="goAddMedicalCheck()">
         <ion-label>Add Medical Check</ion-label>
     </ion-chip>
-    <ion-chip outline color="danger" >
-        <ion-label>Update Medical Check</ion-label>
+    <ion-chip outline color="danger" (click)="goSearchMedicalCheck()">
+        <ion-label>Search Medical Check  </ion-label>
     </ion-chip>
 
 
