--- a/proyectMovil/src/app/searchudmedicalcheck/searchudmedicalcheck.page.scss
+++ b/proyectMovil/src/app/searchudmedicalcheck/searchudmedicalcheck.page.scss
@@ -22,17 +22,12 @@ ion-icon.icon_exit {
   left: 10px
 }
 
-ion-button.addButton {
+ion-button.updateButton {
   --background: #ecb5bf;
 
 }
 
-.example-form {
-  min-width: 150px;
-  max-width: 500px;
-  width: 100%;
-}
+ion-button.removeButton {
+  --background: #ecb5bf;
 
-.example-full-width {
-  width: 100%;
 }
