--- a/proyectMovil/src/app/home/home.page.html
+++ b/proyectMovil/src/app/home/home.page.html
@@ -6,9 +6,7 @@
 
 
 <ion-content>
-  <ion-img src="./src/assets/icon/hospitalhome.jpg" width="1800"
-           height="1000"
-           alt="hospital">
+  <ion-img src="assets/hospital.jpg" alt="hospital">
   </ion-img>
 
   <ion-grid>
