--- a/proyectMovil/src/app/addmedicalcheck/addmedicalcheck.page.scss
+++ b/proyectMovil/src/app/addmedicalcheck/addmedicalcheck.page.scss
@@ -27,6 +27,11 @@ ion-button.addButton {
 
 }
 
+ion-button.editButton {
+  --background: #ecb5bf;
+
+}
+
 .example-form {
   min-width: 150px;
   max-width: 500px;
