--- a/proyectMovil/src/app/principal/principal.page.html
+++ b/proyectMovil/src/app/principal/principal.page.html
@@ -5,7 +5,7 @@
                 <ion-toolbar class="toolbar"> EEUU HOSPITAL</ion-toolbar>
             </ion-col>
             <ion-col size="2">
-                <ion-icon class="icon_exit" name="exit" style="color: #1e2023"></ion-icon>
+                <ion-icon class="icon_exit" name="exit" style="color: #1e2023" ></ion-icon><!--AQUI DEBE IR LA FUNCION GLOBAL PARA CERRARTODO EN TODAS LAS VISTAS -->
             </ion-col>
         </ion-row>
     </ion-grid>
@@ -14,13 +14,17 @@
 <div class="content_avatar">
     <ion-item lines="none">
         <ion-avatar slot="start">
-            <img src="./src/assets/icon/fotoperfil.jpg">
+            <img src="assets/cerveza.jpg">
         </ion-avatar>
         <ion-label>
             <h3 style="color:black;"> EDISON SANANGO </h3>
             <p style="color:black;"> Administrator </p>
             <p style="color:black;"> 1728 </p>
         </ion-label>
+        <ion-button class="editButton" style="color: black; ">
+            <ion-icon name="create"> </ion-icon>
+        </ion-button>
+
     </ion-item>
 </div>
 
