--- a/proyectMovil/src/app/searchudmedicalcheck/searchudmedicalcheck.page.html
+++ b/proyectMovil/src/app/searchudmedicalcheck/searchudmedicalcheck.page.html
@@ -24,6 +24,9 @@
       <p style="color:black;"> Administrator </p>
       <p style="color:black;"> 1728 </p>
     </ion-label>
+    <ion-button class="editButton" style="color: black; ">
+      <ion-icon name="create"> </ion-icon>
+    </ion-button>
   </ion-item>
 </div>
 
