--- a/proyectWeb/src/app/principal/principal.page.scss
+++ b/proyectWeb/src/app/principal/principal.page.scss
@@ -9,18 +9,18 @@ ion-toolbar.toolbar {
   font-size: 30px;
 }
 
-ion-icon.icon_exit {
-  font-size: 32px;
-  position: relative;
-  top: 11px;
-  left: 10px
-}
 
 ion-button.editButton {
   --background: #ecb5bf;
 
 }
 
+ion-button.exitButton {
+  --background: #ecb5bf;
+  height: 40px;
+  position: relative;
+  left: 165px;
+}
 
 
 
