--- a/proyectWeb/src/app/updatepatient/updatepatient.page.html
+++ b/proyectWeb/src/app/updatepatient/updatepatient.page.html
@@ -2,20 +2,25 @@
   <ion-grid>
     <ion-row>
       <ion-col size="2">
-        <ion-icon class="icon_back" name="arrow-round-back" style="color: #1e2023"></ion-icon>
+        <ion-button class="backButton" (click)="goSearchPatient()" >
+          <ion-icon class="icon_back" name="arrow-round-back" style="color: #1e2023" size="large"></ion-icon>
+        </ion-button>
       </ion-col>
       <ion-col size="8">
         <ion-toolbar class="toolbar"> EEUU HOSPITAL</ion-toolbar>
       </ion-col>
       <ion-col size="2">
-        <ion-icon class="icon_exit" name="exit" style="color: #1e2023"></ion-icon>
+        <ion-button class="exitButton" size="large">
+          <ion-icon class="icon_exit" name="exit" style="color: #1e2023"></ion-icon>
+        </ion-button>
+
       </ion-col>
     </ion-row>
   </ion-grid>
 </ion-header>
 
 <div class="content_avatar">
-  <ion-item lines="none">
+  <ion-item >
     <ion-avatar slot="start">
       <img src="./src/assets/icon/fotoperfil.jpg">
     </ion-avatar>
@@ -29,7 +34,7 @@
     </ion-button>
   </ion-item>
 </div>
-
+<br>
 <ion-label text-center> UPDATE PATIENT</ion-label>
 
 <ion-content>
