--- a/proyectWeb/src/app/addmedicalcheck/addmedicalcheck.page.scss
+++ b/proyectWeb/src/app/addmedicalcheck/addmedicalcheck.page.scss
@@ -31,6 +31,11 @@ ion-button.editButton {
 
 }
 
+ion-button.blood {
+  --background: #ecb5bf;
+
+}
+
 .example-form {
   min-width: 150px;
   max-width: 500px;
