--- a/proyectMovil/src/app/searchudmedicalcheck/searchudmedicalcheck.page.html
+++ b/proyectMovil/src/app/searchudmedicalcheck/searchudmedicalcheck.page.html
@@ -2,17 +2,23 @@
   <ion-grid>
     <ion-row>
       <ion-col size="2">
-        <ion-icon class="icon_back" name="arrow-round-back" style="color: #1e2023"></ion-icon>
+        <ion-button class="backButton" (click)="goPrincipal()">
+          <ion-icon class="icon_back" name="arrow-round-back" style="color: #1e2023" size="large"></ion-icon>
+        </ion-button>
       </ion-col>
       <ion-col size="8">
         <ion-toolbar class="toolbar"> EEUU HOSPITAL</ion-toolbar>
       </ion-col>
       <ion-col size="2">
-        <ion-icon class="icon_exit" name="exit" style="color: #1e2023"></ion-icon>
+        <ion-button class="exitButton" >
+          <ion-icon class="icon_exit" name="exit" style="color: #1e2023"></ion-icon>
+        </ion-button>
+
       </ion-col>
     </ion-row>
   </ion-grid>
 </ion-header>
+
 
 <div class="content_avatar">
   <ion-item lines="none">
