--- a/proyectMovil/src/app/updatedoctor/updatedoctor.page.html
+++ b/proyectMovil/src/app/updatedoctor/updatedoctor.page.html
@@ -2,20 +2,26 @@
   <ion-grid>
     <ion-row>
       <ion-col size="2">
-        <ion-icon class="icon_back" name="arrow-round-back" style="color: #1e2023"></ion-icon>
+        <ion-button class="backButton" (click)="goSearchDoctor()">
+          <ion-icon class="icon_back" name="arrow-round-back" style="color: #1e2023" size="large"></ion-icon>
+        </ion-button>
       </ion-col>
       <ion-col size="8">
         <ion-toolbar class="toolbar"> EEUU HOSPITAL</ion-toolbar>
       </ion-col>
       <ion-col size="2">
-        <ion-icon class="icon_exit" name="exit" style="color: #1e2023"></ion-icon>
+        <ion-button class="exitButton" >
+          <ion-icon class="icon_exit" name="exit" style="color: #1e2023"></ion-icon>
+        </ion-button>
+
       </ion-col>
     </ion-row>
   </ion-grid>
 </ion-header>
 
+
 <div class="content_avatar">
-  <ion-item lines="none">
+  <ion-item >
     <ion-avatar slot="start">
       <img src="./src/assets/icon/fotoperfil.jpg">
     </ion-avatar>
@@ -29,10 +35,158 @@
     </ion-button>
   </ion-item>
 </div>
-
+<br>
 <ion-label text-center> UPDATE DOCTOR</ion-label>
 
 <ion-content>
+  <form (ngSubmit)="updateDoctor(doctorForm)" #doctorForm="ngForm">
+    <ion-grid>
+      <ion-row>
+        <ion-col size="4.5">
+          <ion-item lines="none" text-justify>
+            <ion-label>Doctor's <br>
+              Identification:
+            </ion-label>
+          </ion-item>
+        </ion-col>
+        <ion-col size="7.5">
+          <ion-item>
+            <ion-input type="text"
+                       name="id"
+                       pattern="([0-9])+"
+                       required
+                       [(ngModel)]="doctor.identification"
+                       placeholder="Ej: 1781818193"
+                       #identificationInput ="ngModel">
+            </ion-input>
+          </ion-item>
+          <div *ngIf="identificationInput.touched && identificationInput.dirty">
+            <p *ngIf="identificationInput.errors?.required " style="color: red">
+              This field is required.
+            </p>
+
+            <p *ngIf="identificationInput.errors?.pattern" style="color: red">
+              Only-numbers Field.
+            </p>
+          </div>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col size="4.5">
+          <ion-item lines="none">
+            <ion-label>Doctor's
+              Names:
+            </ion-label>
+          </ion-item>
+        </ion-col>
+        <ion-col size="7.5">
+          <ion-item>
+            <ion-input type="text"
+                       name="names"
+                       required
+                       pattern="[a-zA-ZÀ-ÿ\u00f1\u00d1]{1}[a-zA-ZÀ-ÿ\u00f1\u00d1\s]*"
+                       maxlength="50"
+                       placeholder="Ej: Edison Ubaldo"
+                       [(ngModel)]="doctor.names"
+                       #namesInput="ngModel">
+            </ion-input>
+          </ion-item>
+          <div *ngIf="namesInput.touched && namesInput.dirty">
+            <p *ngIf="namesInput.errors?.required " style="color: red">
+              This field is required.
+            </p>
+
+            <p *ngIf="namesInput.errors?.pattern" style="color: red">
+              Only-words Field.
+            </p>
+
+          </div>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col size="4.5">
+          <ion-item lines="none">
+            <ion-label>Doctor's <br>
+              Lastnames:
+            </ion-label>
+          </ion-item>
+        </ion-col>
+        <ion-col size="7.5">
+          <ion-item>
+            <ion-input type="text"
+                       name="lastNames"
+                       required
+                       pattern="[a-zA-ZÀ-ÿ\u00f1\u00d1]{1}[a-zA-ZÀ-ÿ\u00f1\u00d1\s]*"
+                       maxlength="50"
+                       placeholder="Ej: Sanango Simbaña"
+                       [(ngModel)]="doctor.lastNames"
+                       #lastNamesInput="ngModel" >
+            </ion-input>
+          </ion-item>
+          <div *ngIf="lastNamesInput.touched && lastNamesInput.dirty">
+            <p *ngIf="lastNamesInput.errors?.required " style="color: red">
+              This field is required.
+            </p>
+
+            <p *ngIf="lastNamesInput.errors?.pattern" style="color: red">
+              Only-words Field.
+            </p>
+
+          </div>
+        </ion-col>
+      </ion-row>
+
+      <!--         <ion-row>
+                   <ion-col size="4.5">
+                       <ion-item lines="none">
+                           <ion-label>Doctor's <br>
+                               Specialty:
+                           </ion-label>
+                       </ion-item>
+                   </ion-col>
+                   <ion-col size="7.5">
+                       <ion-item>
+                           <ion-select>
+                               <ion-select-option name = "specialty"
+                                                  [(ngModel)]="doctor.specialty"
+                                                  #specialtyInput="ngModel">  Cardiologist</ion-select-option>
+                           </ion-select>
+                       </ion-item>
+                   </ion-col>
+               </ion-row>-->
+
+      <ion-row>
+        <ion-col size="4.5">
+          <ion-item lines="none">
+            <ion-label>Doctor's <br>
+              Birthdate:
+            </ion-label>
+          </ion-item>
+        </ion-col>
+        <ion-col size="7.5">
+          <ion-item>
+            <ion-datetime type="Date"
+                          name=" birthdate"
+                          required
+                          [(ngModel)]="doctor.birthdate"
+                          #birthdateInput = "ngModel"></ion-datetime>
+          </ion-item>
+        </ion-col >
+      </ion-row>
+
+    </ion-grid>
+
+    <ion-button class="updateButton"
+                expand="full"
+                style="color: black;"
+                [disabled]="!doctorForm.valid" (click)="updateConfirm()">UPDATE</ion-button>
+  </form>
+</ion-content>
+
+
+<!--<ion-content>
   <ion-grid>
     <ion-row>
       <ion-col size="4.5">
@@ -122,5 +276,5 @@
 
   <ion-button class="updateButton" expand="full" style="color: black; ">UPDATE </ion-button>
 
-</ion-content>
+</ion-content>-->
 
