--- a/proyectMovil/src/app/updatepatient/updatepatient.page.html
+++ b/proyectMovil/src/app/updatepatient/updatepatient.page.html
@@ -2,20 +2,26 @@
   <ion-grid>
     <ion-row>
       <ion-col size="2">
-        <ion-icon class="icon_back" name="arrow-round-back" style="color: #1e2023"></ion-icon>
+        <ion-button class="backButton" (click)="goSearchPatient()">
+          <ion-icon class="icon_back" name="arrow-round-back" style="color: #1e2023" size="large"></ion-icon>
+        </ion-button>
       </ion-col>
       <ion-col size="8">
         <ion-toolbar class="toolbar"> EEUU HOSPITAL</ion-toolbar>
       </ion-col>
       <ion-col size="2">
-        <ion-icon class="icon_exit" name="exit" style="color: #1e2023"></ion-icon>
+        <ion-button class="exitButton" >
+          <ion-icon class="icon_exit" name="exit" style="color: #1e2023"></ion-icon>
+        </ion-button>
+
       </ion-col>
     </ion-row>
   </ion-grid>
 </ion-header>
 
+
 <div class="content_avatar">
-  <ion-item lines="none">
+  <ion-item >
     <ion-avatar slot="start">
       <img src="./src/assets/icon/fotoperfil.jpg">
     </ion-avatar>
@@ -29,9 +35,171 @@
     </ion-button>
   </ion-item>
 </div>
-
+<br>
 <ion-label text-center> UPDATE PATIENT</ion-label>
 
+<ion-content>
+  <form (ngSubmit)="updatePatient(patientForm)" #patientForm="ngForm">
+    <ion-grid>
+      <ion-row>
+        <ion-col size="4.5">
+          <ion-item lines="none" text-justify>
+            <ion-label>Patient's <br>
+              Identificaction:
+            </ion-label>
+          </ion-item>
+        </ion-col>
+        <ion-col size="7.5">
+          <ion-item>
+            <ion-input type="text"
+                       name="id"
+                       pattern="([0-9])+"
+                       required
+                       [(ngModel)]="patient.identification"
+                       placeholder="Ej: 1781818193"
+                       #identificationInput="ngModel">
+            </ion-input>
+          </ion-item>
+          <div *ngIf="identificationInput.touched && identificationInput.dirty">
+            <p *ngIf="identificationInput.errors?.required " style="color: red">
+              This field is required.
+            </p>
+
+            <p *ngIf="identificationInput.errors?.pattern" style="color: red">
+              Only-numbers Field.
+            </p>
+          </div>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col size="4.5">
+          <ion-item lines="none">
+            <ion-label> Patient's
+              Names:
+            </ion-label>
+          </ion-item>
+        </ion-col>
+        <ion-col size="7.5">
+          <ion-item>
+            <ion-input type="text"
+                       name="names"
+                       pattern="[a-zA-ZÀ-ÿ\u00f1\u00d1]{1}[a-zA-ZÀ-ÿ\u00f1\u00d1\s]*"
+                       required
+                       [(ngModel)]="patient.names"
+                       placeholder="Ej: Edison Ubaldo"
+                       #namesInput="ngModel">
+            </ion-input>
+          </ion-item>
+          <div *ngIf="namesInput.touched && namesInput.dirty">
+            <p *ngIf="namesInput.errors?.required " style="color: red">
+              This field is required.
+            </p>
+
+          </div>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col size="4.5">
+          <ion-item lines="none">
+            <ion-label>Patient's <br>
+              Lastnames:
+            </ion-label>
+          </ion-item>
+        </ion-col>
+        <ion-col size="7.5">
+          <ion-item>
+            <ion-input type="text"
+                       name="lastnames"
+                       pattern="[a-zA-ZÀ-ÿ\u00f1\u00d1]{1}[a-zA-ZÀ-ÿ\u00f1\u00d1\s]*"
+                       required
+                       placeholder="Ej: Sanango Simbaña"
+                       [(ngModel)]="patient.lastnames"
+                       #lastnamesInput="ngModel">
+            </ion-input>
+          </ion-item>
+          <div *ngIf="lastnamesInput.touched && lastnamesInput.dirty">
+            <p *ngIf="lastnamesInput.errors?.required " style="color: red">
+              This field is required.
+            </p>
+
+          </div>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col size="4.5">
+          <ion-item lines="none">
+            <ion-label>Patient <br>
+              Birthdate:
+            </ion-label>
+          </ion-item>
+        </ion-col>
+        <ion-col size="7.5">
+          <ion-item>
+            <ion-datetime type="date"
+                          name="birthdate"
+                          required
+                          [(ngModel)]="patient.birthdate"
+                          #birthdateInput="ngModel">
+
+            </ion-datetime>
+          </ion-item>
+          <div *ngIf="birthdateInput.touched && birthdateInput.dirty">
+            <p *ngIf="birthdateInput.errors?.required " style="color: red">
+              This field is required.
+            </p>
+
+          </div>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col size="12">
+          <ion-item>
+            <ion-label position="floating">Allergies</ion-label>
+            <ion-textarea type="text"
+                          name="allergies"
+                          maxlength="1000"
+                          [(ngModel)]="patient.allergies"
+                          #allergiesInput="ngModel">
+
+            </ion-textarea>
+          </ion-item>
+
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col size="12">
+          <ion-item>
+            <ion-label position="floating">Medical Record</ion-label>
+            <ion-textarea type="text"
+                          name="medicalrecord"
+                          maxlength="1000"
+                          [(ngModel)]="patient.medicalRecord"
+                          #medicalrecordInput="ngModel">
+
+            </ion-textarea>
+          </ion-item>
+
+        </ion-col>
+      </ion-row>
+
+    </ion-grid>
+
+    <ion-button class="updateButton"
+                expand="full"
+                style="color: black;"
+                [disabled]="!patientForm.valid" (click)="updateConfirm()">ADD
+    </ion-button>
+  </form>
+</ion-content>
+
+
+
+<!--
 <ion-content>
   <ion-grid>
     <ion-row>
@@ -124,3 +292,4 @@
 
 </ion-content>
 
+-->
