Finalizado lo obligatorio - ver si es posible los pendientes

--- a/ProyectoWeb/frontend/src/app/rutas/ruta-update-medical-check/ruta-update-medical-check.component.html
+++ b/ProyectoWeb/frontend/src/app/rutas/ruta-update-medical-check/ruta-update-medical-check.component.html
@@ -104,7 +104,7 @@
         <div class="ui-g-8">
           <div class="ui-g-8">
             <input pInputText type="text" name="blood" pattern="([0-9])+" [(ngModel)]="medicalCheck.bloodPresure"
-                   #bloodPressureInput="ngModel"  required  />
+                   #bloodPressureInput="ngModel"  required readonly  />
           </div>
           <div class="ui-g-4">
             <button pButton type="button" name="buttonBlood" icon="pi pi-heart" style="margin-right: .5em; width: 195px; background-color: hotpink" (click)="takeBloodPressure()" ></button>
