--- a/ProyectoWeb/frontend/src/app/app.component.html
+++ b/ProyectoWeb/frontend/src/app/app.component.html
@@ -281,6 +281,9 @@
 <div class="toolbar"   role="banner">
 
   <span  style="color: #ffffff; font-size: large "  >EUSS HOSPITAL</span>
+  <a [routerLink]="['/login']" >
+    <button pButton type="button" class="ui-button-success" icon="pi pi-sign-out" style="margin-right: .5em; left: 700px;"></button>
+  </a>
 </div>
 
 
