--- a/ProyectoWeb/frontend/src/app/rutas/ruta-manage-medical-check/ruta-manage-medical-check.component.html
+++ b/ProyectoWeb/frontend/src/app/rutas/ruta-manage-medical-check/ruta-manage-medical-check.component.html
@@ -53,9 +53,9 @@
         <a [routerLink]="['/login','principal', 'updateMedicalCheck',medicalCheck.id]" >
           <button pButton type="button" class="ui-button-success" icon="pi pi-pencil" style="margin-right: .5em;"></button>
         </a>
-        <div *ngIf="_authService.deleteMedicalCheck">
-          <button pButton  type="button" class="ui-button-danger" icon="pi pi-trash" style="margin-right: .5em;" (click)="delete(medicalCheck.id)" ></button>
-        </div>
+<!--        <div *ngIf="_authService.deleteMedicalCheck">-->
+<!--          <button pButton  type="button" class="ui-button-danger" icon="pi pi-trash" style="margin-right: .5em;" (click)="delete(medicalCheck.id)" ></button>-->
+<!--        </div>-->
       </td>
     </tr>
   </ng-template>
