--- a/ProyectoWeb/frontend/src/app/rutas/ruta-principal/ruta-principal.component.html
+++ b/ProyectoWeb/frontend/src/app/rutas/ruta-principal/ruta-principal.component.html
@@ -3,7 +3,7 @@
 <div class="ui-g ui-fluid">
 
   <div class="ui-g-12 ui-md-3">
-    IMAGEN
+
   </div>
 
   <div class="ui-g-12 ui-md-6">
@@ -43,5 +43,8 @@
 </div>
 
 <hr>
+
+<!--<p-galleria [images]="images" panelWidth="700" panelHeight="500" style="position: center" [showCaption]="true"></p-galleria>-->
+
 
 <router-outlet></router-outlet>
