--- a/equipoJugador/frontend/src/app/Rutas/ruta-actualizar-carrito/ruta-actualizar-carrito.component.html
+++ b/equipoJugador/frontend/src/app/Rutas/ruta-actualizar-carrito/ruta-actualizar-carrito.component.html
@@ -68,7 +68,7 @@
       <div class="ui-g-12 ui-md-12">
         <div class="ui-g-12">
           <button pButton id="crearButton" name="actualizarButton" label="ACTUALIZAR CABECERA CARRITO" type="button" style="background-color: firebrick"
-                  [disabled]="!cabCarritoForm.valid" (click)="actualizarCarrito()"></button>
+                  [disabled]="!cabCarritoForm.valid" (click)="actualizarCabeceraCarrito()"></button>
         </div>
       </div>
 
