--- a/equipoJugador/frontend/src/app/Rutas/ruta-actualizar-usuario/ruta-actualizar-usuario.component.html
+++ b/equipoJugador/frontend/src/app/Rutas/ruta-actualizar-usuario/ruta-actualizar-usuario.component.html
@@ -95,7 +95,7 @@
           Rol:
         </div>
         <div class="ui-g-8">
-          <p-dropdown [options]="roles" name="rol" [(ngModel)]="selectedRol" optionLabel="nombre" required #rolInput="ngModel" ></p-dropdown>
+          <p-dropdown [options]="roles" name="rol" [(ngModel)]="selectedRol" [placeholder]="selectedRol" optionLabel="nombre" required #rolInput="ngModel" ></p-dropdown>
         </div>
       </div>
 
