--- a/equipoJugador/frontend/src/app/Rutas/ruta-add-jugador/ruta-add-jugador.component.html
+++ b/equipoJugador/frontend/src/app/Rutas/ruta-add-jugador/ruta-add-jugador.component.html
@@ -132,7 +132,7 @@
       <div class="ui-g-12 ui-md-12">
         <div class="ui-g-12">
           <button pButton name="addButton" label="CREAR" type="button" style="background-color: firebrick"
-                  [disabled]="!jugadorForm.valid" (click)="crearJugador()"></button>
+                  [disabled]="!jugadorForm.valid || validarPrecio()" (click)="crearJugador()"></button>
         </div>
       </div>
 
