--- a/equipoJugador/frontend/src/app/Rutas/ruta-gestionar-carrito/ruta-gestionar-carrito.component.html
+++ b/equipoJugador/frontend/src/app/Rutas/ruta-gestionar-carrito/ruta-gestionar-carrito.component.html
@@ -48,7 +48,7 @@
           <button pButton type="button" class="ui-button-success" icon="pi pi-pencil" style="margin-right: .5em;"></button>
         </a>
 
-        <button pButton type="button" class="ui-button-danger" icon="pi pi-trash" style="margin-right: .5em;" (click)="eliminar(carrito.id)" ></button>
+<!--        <button pButton type="button" class="ui-button-danger" icon="pi pi-trash" style="margin-right: .5em;" (click)="eliminar(carrito.id)" ></button>-->
 
 
       </td>
