--- a/ProyectoWeb/frontend/src/app/rutas/ruta-add-patient/ruta-add-patient.component.html
+++ b/ProyectoWeb/frontend/src/app/rutas/ruta-add-patient/ruta-add-patient.component.html
@@ -106,7 +106,7 @@
           E-mail:
         </div>
         <div class="ui-g-8">
-          <input pInputText type="email" name="email" [(ngModel)]="patient.userEmail" #emailInput="ngModel" required />
+          <input pInputText type="email"  pattern="^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$" name="email" [(ngModel)]="patient.userEmail" #emailInput="ngModel" required />
         </div>
       </div>
 
@@ -114,6 +114,12 @@
         <p *ngIf="emailInput.errors?.required " style="color: red">
           This field is required.
         </p>
+
+        <p *ngIf="emailInput.errors?.pattern" style="color: red">
+          Email Invalid.
+        </p>
+
+
 
       </div>
 
