--- a/ProyectoWeb/frontend/src/app/rutas/ruta-update-medical-check/ruta-update-medical-check.component.html
+++ b/ProyectoWeb/frontend/src/app/rutas/ruta-update-medical-check/ruta-update-medical-check.component.html
@@ -164,7 +164,7 @@
       <div class="ui-g-12 ui-md-12">
         <div class="ui-g-12">
           <button pButton name="updateButton" label="UPDATE" type="button" style="background-color: hotpink"
-                  [disabled]="!medicalCheckForm.valid" (click)="update()" ></button>
+                  [disabled]="!medicalCheckForm.valid || validateWeight() "  (click)="update()" ></button>
         </div>
       </div>
 
