--- a/equipoJugador/frontend/src/app/Rutas/ruta-actualizar-jugador/ruta-actualizar-jugador.component.html
+++ b/equipoJugador/frontend/src/app/Rutas/ruta-actualizar-jugador/ruta-actualizar-jugador.component.html
@@ -132,7 +132,7 @@
 
       <div class="ui-g-12 ui-md-12">
         <div class="ui-g-12">
-          <button pButton name="addButton" label="CREAR" type="button" style="background-color: firebrick"
+          <button pButton name="addButton" label="ACTUALIZAR" type="button" style="background-color: firebrick"
                   [disabled]="!jugadorForm.valid" (click)="actualizarJugador()"></button>
         </div>
       </div>
