--- a/equipoJugador/frontend/src/app/Rutas/ruta-gestionar-jugador/ruta-gestionar-jugador.component.html
+++ b/equipoJugador/frontend/src/app/Rutas/ruta-gestionar-jugador/ruta-gestionar-jugador.component.html
@@ -55,7 +55,7 @@
           <button pButton type="button" class="ui-button-success" icon="pi pi-pencil" style="margin-right: .5em;"></button>
         </a>
 
-        <button pButton type="button" class="ui-button-danger" icon="pi pi-trash" style="margin-right: .5em;" (click)="eliminar(jugador.id)" ></button>
+<!--        <button pButton type="button" class="ui-button-danger" icon="pi pi-trash" style="margin-right: .5em;" (click)="eliminar(jugador.id)" ></button>-->
 
 
       </td>
