--- a/equipoJugador/frontend/src/app/Rutas/ruta-gestionar-usuario/ruta-gestionar-usuario.component.html
+++ b/equipoJugador/frontend/src/app/Rutas/ruta-gestionar-usuario/ruta-gestionar-usuario.component.html
@@ -1,1 +1,59 @@
-<p>ruta-gestionar-usuario works!</p>
+<h1 style="text-align: center; color: firebrick " > GESTIONAR USUARIOS </h1>
+
+<p-table [value]="usuariosFiltrados()"
+         [paginator]="true"
+         [rows]="ROWS">
+  <ng-template pTemplate="caption">
+    Lista de Usuarios
+  </ng-template>
+  <ng-template pTemplate="header">
+    <tr>
+      <th>Nombre</th>
+      <th>Username</th>
+      <th>Rol</th>
+      <th>Acciones</th>
+    </tr>
+    <tr>
+      <th>
+        <input type="text"
+               pInputText
+               name="nombre"
+               [(ngModel)]="filteredNombre">
+      </th>
+      <th>
+        <input type="text"
+               pInputText
+               name="username"
+               [(ngModel)]="filteredUsername">
+      </th>
+      <th>
+        <input type="text"
+               pInputText
+               name="rol"
+               [(ngModel)]="filteredRol">
+      </th>
+      <th></th>
+
+    </tr>
+  </ng-template>
+  <ng-template pTemplate="body" let-usuario>
+    <tr>
+      <td>{{usuario.nombre}}</td>
+      <td>{{usuario.username}}</td>
+      <td>{{usuario.rol}}</td>
+      <td>
+
+        <a [routerLink]="['/login','principal', 'actualizarUsuario',usuario.id]" >
+          <button pButton type="button" class="ui-button-success" icon="pi pi-pencil" style="margin-right: .5em;"></button>
+        </a>
+
+        <button pButton type="button" class="ui-button-danger" icon="pi pi-trash" style="margin-right: .5em;" (click)="eliminar(usuario.id)" ></button>
+
+
+      </td>
+    </tr>
+  </ng-template>
+</p-table>
+
+<p-toast key="myKey1" position="top-right"  ></p-toast>
+
