--- a/equipoJugador/frontend/src/app/app.component.html
+++ b/equipoJugador/frontend/src/app/app.component.html
@@ -281,6 +281,9 @@
 <div class="toolbar"   role="banner">
 
   <span  style="color: #ffffff; font-size: large "  >EQUIPO Y JUGADOR</span>
+  <a [routerLink]="['/login']" >
+    <button pButton type="button" class="ui-button-success" icon="pi pi-sign-out" style="margin-right: .5em; left: 700px;" (click)="logout()" ></button>
+  </a>
 </div>
 
 
